--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div class="flex flex-wrap items-center justify-between py-3 gap-6 md:py-4 md:gap-0">
           <div class="w-full px-6 flex justify-between lg:w-max md:px-0">
             <a aria-label="logo" class="flex space-x-2 items-center">
-              <img src="icon-burgeer.png" class="w-12"
-                alt="tailus logo" width="144" height="133" />
+              <img src="icon-burgeer.png" class="w-12" alt="tailus logo" width="144" height="133" />
               <span class="text-2xl font-bold text-yellow-900">Savoring Life</span>
             </a>
 
@@ -33,7 +32,7 @@
 
           <div
             class="hidden w-full lg:flex flex-wrap justify-end items-center space-y-6 p-6 rounded-xl bg-white md:space-y-0 md:p-0 md:flex-nowrap md:bg-transparent lg:w-7/12">
-            
+
             <div class="w-full space-y-2 border-yellow-200 lg:space-y-0 md:w-max lg:border-l">
               <button type="button" title="button"
                 class="w-full py-3 px-6 text-center rounded-full transition active:bg-yellow-200 focus:bg-yellow-100 sm:w-max">
@@ -103,5 +102,11 @@
 
   <script src="fetch.js"></script>
 </body>
+
+<footer>
+<span class="text-sm sm:text-center text-brown-300 dark:text-yellow-400 font-bold w-full mx-auto max-w-screen-xl py-4 md:px-20 md:flex md:items-center md:justify-end">
+        © 2023 Harsheeta Kapoor and Harsh Kumar™. All Rights Reserved.
+</footer>
+
 
 </html>
