login signup added

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               <button type="button" title="button"
                 class="w-full py-3 px-6 text-center rounded-full transition active:bg-yellow-200 focus:bg-yellow-100 sm:w-max">
                 <span class="block text-yellow-800 font-semibold text-sm">
-                  Sign up
+                  <a href="signup.html">Sign up</a>
                 </span>
               </button>
               <button type="button" title="button"
                 class="w-full py-3 px-6 text-center rounded-full transition bg-yellow-300 hover:bg-yellow-100 active:bg-yellow-400 focus:bg-yellow-300 sm:w-max">
                 <span class="block text-yellow-900 font-semibold text-sm">
-                  Login
+                  <a href="login.html">Login</a>
                 </span>
               </button>
             </div>
