--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="flex flex-wrap items-center justify-between py-3 gap-6 md:py-4 md:gap-0">
           <div class="w-full px-6 flex justify-between lg:w-max md:px-0">
             <a aria-label="logo" class="flex space-x-2 items-center">
-              <img src="icon-burgeer.png" class="w-12" alt="tailus logo" width="144" height="133" />
+              <img src="res/icon-burgeer.png" class="w-12" alt="logo" width="144" height="133" />
               <span class="text-2xl font-bold text-yellow-900">Savoring Life</span>
             </a>
 
@@ -101,6 +101,15 @@
   </div>
 
   <script src="fetch.js"></script>
+  <script>
+    const logOutButton = document.getElementById('logOutButton');
+
+    logOutButton.addEventListener('click', () => {
+      // Add your logout logic here
+      // For example, redirect the user to the login page
+      window.location.href = "signup.html"; // Replace with your desired logout behavior
+    });
+  </script>
 </body>
 
 <footer>
